Bump Quarkus to 3.32.1